[package]
name = "chip8"
version = "0.1.0"
authors = ["Manish <manish.gill@wingify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
env_logger = "0.6.2"
rand = "0.7"
sdl2 = "0.32.2"
gl = "0.10.0"
lazy_static = "1"


[dev-dependencies]
tempfile = "3.1.0"
